--- a/app/Resources/views/app/topnav.html.twig
+++ b/app/Resources/views/app/topnav.html.twig
@@ -20,7 +20,7 @@
                             </a>
                         </li>
                         <li><a href="#">Help</a></li>
-                        <li><a href="#"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                        <li><a title="{{ 'Logout'|trans({}, 'FOSUserBundle') }}"  href="{{ path('fos_user_security_logout') }}"><i class="fa fa-sign-out pull-right"></i>{{ 'Logout'|trans({}, 'FOSUserBundle') }}</a></li>
                     </ul>
                 </li>
                 
