--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,7 @@
                 {% block top_content_header %}
                 <div class="page-title">
                     <div class="title_left">
-                   <h3>{% block page_title %}</h3>Page Title{% endblock page_title %}
+                        <h3>{% block page_title %}{% endblock page_title %}</h3>
                     </div>
 
                     <div class="title_right">
